--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,8 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "description": "",
+  "description": "Weight lifting workout webapp",
+  "repository": "https://github.com/torres-roberto/wrkout",
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass sass/main.scss css/styles.css -w"
